--- a/install.yaml
+++ b/install.yaml
@@ -4,3 +4,9 @@ name: ddev-make
 project_files:
   - config.make.yaml
   - commands/web/make
+
+# Version constraint for DDEV that will be validated against the running DDEV executable
+# and prevent add-on from being installed if it doesn't validate.
+# See https://github.com/Masterminds/semver#checking-version-constraints for constraint rules.
+# Available with DDEV v1.23.4+, and works only for DDEV v1.23.4+ binaries
+ddev_version_constraint: '>= v1.24.3'
